2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Parser/CSharp/cs.ATG,
	  Project/Src/Parser/CSharp/Parser.cs: fixed Bug 384199 - c# code
	  parsing breaks on unsafe pointers

2008-09-23  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs,
	  Project/Src/Lexer/Special/PreProcessingDirective.cs,
	  Project/Src/Lexer/AbstractLexer.cs,
	  Project/Src/PrettyPrinter/CSharp/CSharpOutputVisitor.cs,
	  Project/Src/PrettyPrinter/CSharp/OutputFormatter.cs,
	  Project/Src/PrettyPrinter/IOutputAstVisitor.cs,
	  Project/Src/PrettyPrinter/AbstractOutputFormatter.cs,
	  Project/Src/PrettyPrinter/VBNet/VBNetOutputVisitor.cs: Added some
	  stuff for pre processor directive handling.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* NRefactory.mdp: Updated.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: fixing comment bug.

2008-09-04  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: fix for comment begin line.

2008-09-04  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs: Fixed comment start line.

2008-07-28  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Lexer.cs,
	  Project/Src/Lexer/Special/SpecialTracker.cs,
	  Project/Src/Lexer/Special/TagComment.cs,
	  Project/Src/Lexer/Special/Comment.cs,
	  Project/Src/Lexer/VBNet/Lexer.cs: Applied some custom nrefactory
	  changes.

2008-07-13  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Tokens.cs: Backported some nrefactory
	  changes.

2008-07-10  Mike Krüger <mkrueger@novell.com> 

	* Project/Src/Lexer/CSharp/Tokens.cs: Added some stuff from newer
	  nrefactory. To support c# 3.0 we need to update it to a newer
	  version (when the new dom works I'll do it - our changes in
	  nrefactory  aren't used anymore because all information is
	  retrieved by mcs and nrefactory only get's used as an expression
	  parser).

2008-04-22  Michael Hutchinson  <mhutchinson@novell.com>
